package cz.muni.fi.pa165.seminar3.librarymanagement.user;

public enum UserType {
    LIBRARIAN,
    CLIENT
}