package cz.muni.fi.pa165.seminar3.librarymanagement.model.dto.book_mngmnt.Book;


import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class AuthorDto {
    private String name;
    private String surname;
}
