package cz.muni.fi.pa165.seminar3.librarymanagement.model.dto.payment;

public enum PaymentStatus {
    APPROVED,
    WAITING,
    DECLINED
}
